name:                test-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dragoon8192/test-project#readme
license:             BSD3
license-file:        LICENSE
author:              DRAGOON8192
maintainer:          dragoon8192@gmail.com
copyright:           2021 DRAGOON8192
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable test-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
